View Issue Details

IDProjectCategoryView StatusLast Update
0027879Open CASCADEOCCT:DRAWpublic2016-12-09 16:38
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2015 
Product Version6.9.1 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027879: Draw Harness, ViewerTest - disable VSync within non-interactive mode
DescriptionOpenGL context enables vertical synchronization (VSync) by default since #0025556.
This option is intended to eliminate visual artifacts on the screen within interactive mode, however within non-interactive mode this option makes no sense.

At least on Windows 7 platform, VSync still affects performance in non-interactive mode, when window is not displayed on the screen at all.
This increases time required to perform tests on hardware with fast GPU and potentially affects CPU usage statistics as well.

It is proposed to disable VSync in non-interactive mode.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2016-09-17 13:32

administrator   ~0057883

Branch CR27879 has been created by kgv.

SHA-1: 3288d507fd9539ba490f696bbb603bbb70d70800


Detailed log of new commits:

Author: kgv
Date: Sat Sep 17 13:32:13 2016 +0300

    0027879: Draw Harness, ViewerTest - disable VSync within non-interactive mode

kgv

2016-09-17 13:32

developer   ~0057884

Patch is ready for review.

san

2016-09-20 12:35

developer   ~0057945

Branch CR27879 reviewed without remarks, ready for testing.

mkv

2016-09-21 12:06

tester   ~0057980

Dear BugMaster,
Branch CR27879 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 3288d507fd9539ba490f696bbb603bbb70d70800

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1149

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 91034768 / 89870280 [+1.30%]
Total CPU difference: 19355.999999999796 / 19211.76999999994 [+0.75%]
products component :
Total MEMORY difference: 30046290 / 30009119 [+0.12%]
Total CPU difference: 5078.559999999979 / 5121.159999999977 [-0.83%]

Testing on Windows:
occt component :
Total MEMORY difference: 57204192 / 57211877 [-0.01%]
Total CPU difference: 17982.37567089863 / 18509.12864749872 [-2.85%]
products component :
Total MEMORY difference: 21267638 / 21232183 [+0.17%]
Total CPU difference: 4853.877514399948 / 4959.0221883999575 [-2.12%]

There are no differences in images found by testdiff.

mkv

2016-09-21 12:07

tester   ~0057981

Dear BugMaster,
Branch CR27879 is TESTED.

git

2016-10-28 21:45

administrator   ~0059523

Branch CR27879 has been deleted by kgv.

SHA-1: 3288d507fd9539ba490f696bbb603bbb70d70800

Related Changesets

occt: master 14cb22a1

2016-09-17 10:32:13

kgv


Committer: bugmaster Details Diff
0027879: Draw Harness, ViewerTest - disable VSync within non-interactive mode Affected Issues
0027879
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2016-09-17 13:25 kgv New Issue
2016-09-17 13:25 kgv Assigned To => kgv
2016-09-17 13:32 git Note Added: 0057883
2016-09-17 13:32 kgv Note Added: 0057884
2016-09-17 13:32 kgv Assigned To kgv => san
2016-09-17 13:32 kgv Status new => resolved
2016-09-17 13:33 kgv Description Updated
2016-09-20 12:35 san Note Added: 0057945
2016-09-20 12:35 san Assigned To san => bugmaster
2016-09-20 12:35 san Status resolved => reviewed
2016-09-20 12:41 mkv Assigned To bugmaster => mkv
2016-09-21 12:06 mkv Note Added: 0057980
2016-09-21 12:07 mkv Note Added: 0057981
2016-09-21 12:07 mkv Assigned To mkv => bugmaster
2016-09-21 12:07 mkv Status reviewed => tested
2016-09-21 12:07 mkv Test case number => Not needed
2016-09-23 10:21 bugmaster Changeset attached => occt master 14cb22a1
2016-09-23 10:21 bugmaster Status tested => verified
2016-09-23 10:21 bugmaster Resolution open => fixed
2016-10-28 21:45 git Note Added: 0059523
2016-12-09 16:30 aiv Status verified => closed
2016-12-09 16:38 aiv Fixed in Version => 7.1.0