0027879: Draw Harness, ViewerTest - disable VSync within non-interactive mode